--- a/src/pug/include/templates/_header.pug
+++ b/src/pug/include/templates/_header.pug
@@ -9,11 +9,11 @@
   ];
 
   var dropdown = [
-    { text: "Карнизы", link: "#" },
-    { text: "Ткани", link: "#" },
-    { text: "Солнцезащита", link: "#" },
-    { text: "Аксессуары", link: "/taxonomy.html" },
-    { text: "Портфолио", link: "#" },
+    { text: "Карнизы", link: "/category/cornices/index.html" },
+    { text: "Ткани", link: "/category/fabrics/index.html" },
+    { text: "Солнцезащита", link: "/category/sun-protection/index.html" },
+    { text: "Аксессуары", link: "/category/accessories/index.html" },
+    { text: "Портфолио", link: "/our-works.html" },
     { text: "Конструктор", link: "/designer.html" },
     { text: "Услуги", link: "/services.html" },
     { text: "Оплата", link: "/payment.html" },
