--- a/src/pug/include/templates/header/_header_center.pug
+++ b/src/pug/include/templates/header/_header_center.pug
@@ -1,20 +1,20 @@
 .header-center
-  img.header-center__left-twig(src="./images/header-left-twig.svg", alt="header-left-twig")
+  img.header-center__left-twig(src="/images/header-left-twig.svg", alt="header-left-twig")
   .container
     .header-center__shell
       .header-center__shell-lg
         a.header-center__logo(href="/")
-          img(alt="site-logo", src="./images/header-site-logo.png")
+          img(alt="site-logo", src="/images/header-site-logo.png")
         form.header-center__search.header-center__search-lg(action="/")
           input.header-center__search__input(name="s", placeholder="Поиск по товарам", type="search")
           button.header-center__search__submit(type="submit")
-            img(alt="search-icon", src="./images/search-icon.svg", style="height: 19px; width: 20px")
+            img(alt="search-icon", src="/images/search-icon.svg", style="height: 19px; width: 20px")
         .header-center__contacts
           .header-center__socials
             a(href="#")
-              img(alt="instagram-icon", src="./images/instagram-icon.svg")
+              img(alt="instagram-icon", src="/images/instagram-icon.svg")
             a(href="#")
-              img(alt="vkontakte-icon", src="./images/vkontakte-icon.svg")
+              img(alt="vkontakte-icon", src="/images/vkontakte-icon.svg")
           .header-center__details
             .header-center__details__info
               span Анапа
@@ -24,5 +24,5 @@
       form.header-center__search.header-center__search-md(action="/")
         input.header-center__search__input(name="s", placeholder="Поиск по товарам", type="search")
         button.header-center__search__submit(type="submit")
-          img(alt="search-icon", src="./images/search-icon.svg", style="height: 19px; width: 20px")
-  img.header-center__right-twig(src="./images/header-right-twig.svg", alt="header-right-twig")
+          img(alt="search-icon", src="/images/search-icon.svg", style="height: 19px; width: 20px")
+  img.header-center__right-twig(src="/images/header-right-twig.svg", alt="header-right-twig")
