--- a/src/pug/include/templates/header/_header_top.pug
+++ b/src/pug/include/templates/header/_header_top.pug
@@ -15,7 +15,7 @@
               span Вход
         #headerTopFloatShell.header-top__float
           button#headerTopFloatToggle.header-top__burger
-            img(src="./images/header-burger-white.svg", alt="header-burger-white")
+            img(src="/images/header-burger-white.svg", alt="header-burger-white")
           .header-top__float__shell
             nav.header-top__float__menu
               ul.header-top__float__list
