--- a/src/pug/include/templates/header/_header_bottom.pug
+++ b/src/pug/include/templates/header/_header_bottom.pug
@@ -5,14 +5,14 @@
         button#headerDropdownToggle.header-bottom__dropdown__btn
           img(
             alt="header-dropdown-burger",
-            src="./images/header-dropdown-burger.svg",
+            src="/images/header-dropdown-burger.svg",
             style="width: 15px; height: 15px;"
           )
           span Каталог
         .header-bottom__dropdown__list
           each it in dropdown
             a(href=it.link)
-              img(alt="arrow-right-blue", src="./images/arrow-right-blue.svg")
+              img(alt="arrow-right-blue", src="/images/arrow-right-blue.svg")
               span #{it.text}
       nav.header-bottom__menu
         ul.header-bottom__menu__list
