--- a/src/scss/modules/_vars.scss
+++ b/src/scss/modules/_vars.scss
@@ -18,8 +18,10 @@ $max_widths: (
 
 %fill_image {
   position: absolute;
-  left: 0;
   top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
