--- a/src/scss/pages/home/_categories.scss
+++ b/src/scss/pages/home/_categories.scss
@@ -11,9 +11,10 @@
 
   &__item {
     flex: 0 0 calc(50% - 15px);
-    max-width: calc(50% - 15px);
+    width: calc(50% - 15px);
     position: relative;
     height: 264px;
+    overflow-y: hidden;
 
     &__image {
       @extend %fill_image;
@@ -33,6 +34,8 @@
       background: rgba(255, 255, 255, 0.85);
       backdrop-filter: blur(2.5px);
       text-decoration: none;
+      max-width: 85%;
+      overflow-y: hidden;
 
       > span {
         color: #443834;
@@ -53,7 +56,7 @@
 
     &__item {
       flex: 1 0 auto;
-      max-width: 100%;
+      width: 100%;
     }
   }
 }
