Добавил страницу брендов и бахромы

--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "О компании"
   - var description = "Страница описания компании"
-  - var canonical = "/about"
+  - var canonical = "/about.html"
   - var breaditems = [{ text: title }]
 
 block head
