--- a/src/pug/checkout.pug
+++ b/src/pug/checkout.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "Оформление заказа"
   - var description = "Страница оформления заказа"
-  - var canonical = "/checkout"
+  - var canonical = "/checkout.html"
   - var breaditems = [{ text: "Карнизы" }]
   -
     var orders = [
