--- a/src/pug/delivery.pug
+++ b/src/pug/delivery.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "Доставка"
   - var description = "Страница доставки товаров"
-  - var canonical = "/delivery"
+  - var canonical = "/delivery.html"
   - var breaditems = [{ text: title }]
 
 block head
