--- a/src/pug/payment.pug
+++ b/src/pug/payment.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "Оплата"
   - var description = "Страница информации об оплате"
-  - var canonical = "/payment"
+  - var canonical = "/payment.html"
   - var breaditems = [{ text: title }]
 
 block head
