--- a/src/pug/signin.pug
+++ b/src/pug/signin.pug
@@ -3,7 +3,7 @@ extends ./include/layouts/_base_layout
 block variables
   - var title = "Вход"
   - var description = "Страница авторизации"
-  - var canonical = "/signin"
+  - var canonical = "/signin.html"
   - var breaditems = [{ text: "Вход" }]
 
 block head
