--- a/src/pug/signup.pug
+++ b/src/pug/signup.pug
@@ -3,7 +3,7 @@ extends ./include/layouts/_base_layout
 block variables
   - var title = "Регистрация"
   - var description = "Страница регистрации"
-  - var canonical = "/signup"
+  - var canonical = "/signup.html"
   - var breaditems = [{ text: title }]
 
 block head
