--- a/src/pug/our-works.pug
+++ b/src/pug/our-works.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "Галерея работ"
   - var description = "Страница с нашими работами"
-  - var canonical = "/delivery"
+  - var canonical = "/our-works.html"
   - var breaditems = [{ text: title }]
   -
     var list = [
