--- a/src/pug/price.pug
+++ b/src/pug/price.pug
@@ -3,7 +3,7 @@ extends ./include/layouts/_base_layout
 block variables
   - var title = "Прайс"
   - var description = "Страница расценок по позициям"
-  - var canonical = "/price"
+  - var canonical = "/price.html"
   - var breaditems = [{ text: title }]
 
 block head
