--- a/src/pug/services.pug
+++ b/src/pug/services.pug
@@ -4,7 +4,7 @@ include ./include/mixins/utils/_image
 block variables
   - var title = "Услуги"
   - var description = "Страница услуг компании"
-  - var canonical = "/services"
+  - var canonical = "/services.html"
   - var breaditems = [{ text: title }]
 
 block head
