Страница с простым товаром

--- a/src/pug/designer.pug
+++ b/src/pug/designer.pug
@@ -3,7 +3,7 @@ extends ./include/layouts/_base_layout
 block variables
   - var title = "Конструктор"
   - var description = "Страница конструктора продукта"
-  - var canonical = "/delivery.html"
+  - var canonical = "/designer.html"
   - var breaditems = [{ text: "Конструктор" }]
 
 block head
