--- a/src/pug/taxonomy/cornices.pug
+++ b/src/pug/taxonomy/cornices.pug
@@ -10,7 +10,11 @@ block variables
   - var breaditems = [{ text: title }]
   -
     var list = [
-      { img: "1d36d23b156ead252433d4ce2c21c387_XL 14.png", text: "Металлические карнизы", link: "#" },
+      {
+        img: "1d36d23b156ead252433d4ce2c21c387_XL 14.png",
+        text: "Металлические карнизы",
+        link: "/category/cornices/metallicheskij-karniz-dlya-shtor-adel.html"
+      },
       { img: "1d36d23b156ead252433d4ce2c21c387_XL 15.png", text: "Деревянные карнизы", link: "#" },
       { img: "1d36d23b156ead252433d4ce2c21c387_XL 16.png", text: "Эксклюзивные карнизы", link: "#" },
       { img: "1d36d23b156ead252433d4ce2c21c387_XL 17.png", text: "Багетные карнизы", link: "#" },
