--- a/src/scss/taxonomy.page.scss
+++ b/src/scss/taxonomy.page.scss
@@ -26,7 +26,7 @@ h1.page-title {
     width: calc(100% / var(--qty-items) - var(--item-gap) * (var(--qty-items) - 1) / var(--qty-items));
     height: 225px;
     border-radius: 6px;
-    overflow-y: hidden;
+    // overflow-y: hidden;
   }
 
   &__image {
